// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nameTransaction() should return right metadata for 1 transaction 1`] = `
Object {
  "title": "Transfer from",
}
`;

exports[`nameTransaction() should return right metadata for 2 transactions 1`] = `
Object {
  "title": "Approve and Transfer",
}
`;

exports[`transactions should get a transaction by hash 1`] = `
Object {
  "account": Object {
    "address": "0x05e54edb59e1b1e398f9647e617276f6da0eb9ddfc0c02723269b9baa2489dce",
    "network": Object {
      "accountClassHash": "0x3e327de1c40540b98d05cbcb13552008e36f0ec8d61d46956d2f9752c294328",
      "baseUrl": "https://alpha4.starknet.io",
      "chainId": "SN_GOERLI",
      "explorerUrl": "https://goerli.voyager.online",
      "id": "goerli-alpha",
      "name": "Goerli Testnet",
      "readonly": true,
    },
    "networkId": "goerli-alpha",
    "signer": Object {
      "derivationPath": "0",
      "type": "local_secret",
    },
  },
  "hash": "0x16d38d961a659b7565b596060ca812b863a39766accab5a8fd93ace56e6001a",
  "meta": undefined,
  "status": "ACCEPTED_ON_L2",
  "timestamp": 1652257464,
}
`;
